--- a/index.html
+++ b/index.html
@@ -144,9 +144,11 @@
             <section>
                 <p>
                     <form action=" https://formsubmit.co/96d38ff8414c3d024d030da48ce3dce2" method="POST">
-                        <input type="text" placeholder="name" required>
-                        <input type="email" placeholder="email" required><br>
-                        <textarea placeholder="your message" required rows="5"></textarea><br>
+                        <input type="text" name="name" placeholder="name" required>
+                        <input type="hidden" name="_replyto">
+                        <input type="hidden" name="_autoresponse" value="Thank you for reaching out!">
+                        <input type="email" name="email" placeholder="email" required><br>
+                        <textarea name="message" placeholder="your message" required rows="5"></textarea><br>
                         <button class="btn_one">send</button>
                     </form> 
                 </p>
